--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@ body{
      background-color: lightgrey;
 }
 
-img{
+img.hzlogoboven{
     position: absolute;
     top: 0;
     right: 0;
@@ -12,7 +12,7 @@ img{
 
 body {
     background-image: url("index.background.jpg");
-    width: 1000px;
+    width: auto;
     height: 800px;
     margin: 0;
     background-repeat: no-repeat;
@@ -23,6 +23,13 @@ html {
     padding: 0;
 }
 
+summary {
+    color: white
+}
+
+th{
+vertical-align: top;
+}
 p{
     color: white
 }
@@ -47,11 +54,20 @@ th {
  color:  white 
 }
 
-<style>
+label {
+color: white;
+}
+
+progress {
+width: 100%;
+height: 50px;
+}
+/* This is the code for the table in the profile page. */
 table {
   font-family: arial, sans-serif;
   border-collapse: collapse;
   width: 100%;
+
 }
 
 td, th {
@@ -60,6 +76,98 @@ td, th {
   padding: 8px;
 }
 
-tr:nth-child(even) {
+
+/* This is the code for the dropdown menu to go to different pages. */
+body {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .navbar {
+    overflow: hidden;
+    background-color: #333;
+  }
+  
+  .navbar a {
+    float: left;
+    font-size: 16px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  .dropdown {
+    float: left;
+    overflow: hidden;
+  }
+  
+  .dropdown .dropbtn {
+    font-size: 16px;  
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin: 0;
+  }
+  
+  .navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: lightblue;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #ffffff;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+
+  img.homefoto
+  {
+align-content: center;
+
+  }
+img.pfp {
+margin-left: 5px;
 }
-</style>
+
+th.faq{
+    font-size: larger;
+    display: flex;
+    flex-direction: column;
+    margin-top: 2%;
+    max-width: 50%;
+    margin-left: 25%;
+    margin-bottom: 2%;
+}
+p.excerpt {
+font-size: smaller ;
+}
+
+p.readmore {
+font-size: smaller;
+}
+
+th.ict {
+
+}
