--- a/main.css
+++ b/main.css
@@ -1,6 +1,4 @@
-body{ 
-     background-color: lightgrey;
-}
+
 
 img.hzlogoboven{
     position: absolute;
@@ -12,8 +10,7 @@ img.hzlogoboven{
 
 body {
     background-image: url("index.background.jpg");
-    width: auto;
-    height: 800px;
+    background-size: cover;
     margin: 0;
     background-repeat: no-repeat;
 }
@@ -79,69 +76,73 @@ td, th {
 
 /* This is the code for the dropdown menu to go to different pages. */
 body {
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  .navbar {
-    overflow: hidden;
-    background-color: #333;
-  }
-  
-  .navbar a {
-    float: left;
-    font-size: 16px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-  }
-  
-  .dropdown {
-    float: left;
-    overflow: hidden;
-  }
-  
-  .dropdown .dropbtn {
-    font-size: 16px;  
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin: 0;
-  }
-  
-  .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: lightblue;
-  }
-  
-  .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #ffffff;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-  }
-  
-  .dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-  
-  .dropdown-content a:hover {
-    background-color: #ddd;
-  }
-  
-  .dropdown:hover .dropdown-content {
-    display: block;
-  }
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+.navbar {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.navbar a, .dropbtn, .dropbtnusefulltools {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn, .dropdown .dropbtnusefulltools {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn, .dropdown:hover .dropbtnusefulltools {
+  background-color: lightblue;
+}
+
+.dropdown-content, .dropdown-usefulltools {
+  display: none;
+  position: absolute;
+  background-color: #ffffff;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  margin-top: 40px;
+}
+
+.dropdown-content a, .dropdown-usefulltools a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover, .dropdown-usefulltools a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown:hover .dropdown-usefulltools {
+  display: block;
+}
   img.homefoto
   {
 align-content: center;
@@ -169,5 +170,47 @@ font-size: smaller;
 }
 
 th.ict {
-
+color: white;
 }
+
+.swottext{
+text-align: center;
+}
+.swot-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    padding: 20px;
+    margin: 0 auto;
+    max-width: 1200px;
+    justify-content: space-between;
+  }
+  
+  .swot-box {
+    background-color: rgb(86, 199, 199);
+    border: 1px solid #ddd;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    flex: 1 1 calc(50% - 20px);
+    box-sizing: border-box;
+  }
+  
+  .swot-box h2 {
+    font-size: 1.5em;
+    margin-bottom: 10px;
+  }
+  
+  .swot-box p {
+    font-size: 1em;
+    margin-bottom: 20px;
+  }
+  
+  /* for Study Choice */
+  .centered-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    min-height: 200px;
+  }
